corrected some issues with images and page loading

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h1 class="page-header">About Me<bold, text-center,></bold></h1>
     <hr>
     <br>
-    <img src="./portfolio/assets/Red.jpeg" class="img-fluid" alt="Responsive image">
+    <img src="./assets/img/Red.jpeg" class="img-fluid" alt="Responsive image">
 
     <p>Hey everyone! My name is Remington Taylor and I'm learning to be a Software Engineer. I've always kinda lucked up to find some really great jobs on the more customer facing side of technology, and I am looking to become one of the people who make the technology instead of listening to the complaints when its not working. In my spare time I like to play guitar, tennis and rollerblade. Follow me on my journey as I continue to learn. Check back often for more updates!</p>
     </p>
