--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
 
     <h1>Just Some Pics!</h1>
 
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <!--<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -34,25 +34,25 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./portfolio/assets/p2.jpeg" class="d-block w-100" alt="picture">
+            <img src="./assets/img/p1.jpeg" class="d-block w-100" alt="picture">
           </div>
           <div class="carousel-item">
-            <img src="./portfolio/assets/p3.jpeg" class="d-block w-100" alt="picture2">
+            <img src="./assets/img/p2.jpeg" class="d-block w-100" alt="picture2">
           </div>
           <div class="carousel-item">
-            <img src="./portfolio/assets/p4.jpeg" class="d-block w-100" alt="picture3">
+            <img src="./assets/img/p3.jpeg" class="d-block w-100" alt="picture3">
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./portfolio/assets/p5.jpg" class="d-block w-100" alt="picture4">
+          <img src="./assets/img/p4.jpeg" class="d-block w-100" alt="picture4">
         </div>
     </div>
     <div class="carousel-item">
-      <img src="./portfolio/assets/p6.jpeg" class="d-block w-100" alt="picture5">
+      <img src="./assets/img/p5.jpg" class="d-block w-100" alt="picture5">
     </div>
 </div>
 <div class="carousel-item">
-  <img src="./portfolio/assets/p7.jpeg" class="d-block w-100" alt="picture6">
+  <img src="./assets/img/p6.jpeg" class="d-block w-100" alt="picture6">
 </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -63,23 +63,22 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
-      </div>
+      </div> -->
 
 
 
-<!-- <div class="container">
-    <div style="height: 200px; width: 200px;"
-<img src="./portfolio/assets/p1.jpeg" class="rounded float-left" alt="picture 1">
-<img src="./portfolio/assets/p2.jpeg" class="rounded float-right" alt="picture 2">
-<img src="./portfolio/assets/p3.jpeg" class="rounded float-left" alt="picture 3">
-<img src="./portfolio/assets/p4.jpeg" class="rounded float-right" alt="picture 4">
-<img src="./portfolio/assets/p5.jpg" class="rounded float-left" alt="picture 5">
-<img src="./portfolio/assets/p6.jpeg" class="rounded float-right" alt="picture 6">
-<img src="./portfolio/assets/p7.jpeg" class="rounded float-left" alt="picture 7">
-<img src="./portfolio/assets/p8.jpeg" class="rounded float-right" alt="picture 8">
-<img src="./portfolio/assets/p9.jpeg" class="rounded float-left" alt="picture 9">
-<img src="./portfolio/assets/p10.jpeg" class="rounded float-right" alt="picture 10">
-</div> -->
+<div class="container">
+<!-- <img src="./assets/img/p1.jpeg" class="rounded float-left" alt="picture 1"> -->
+<img src="./assets/img/p2.jpeg" class="rounded float-right" alt="picture 2" height="400px" width="400px">
+<img src="./assets/img/p3.jpeg" class="rounded float-left" alt="picture 3" height="400 px" width="400px">
+<img src="./assets/img/p4.jpeg" class="rounded float-right" alt="picture 4" height="400 px" width="400px">
+<img src="./assets/img/p5.jpg" class= "rounded float-left" alt="picture 5" height="400 px" width="400px">
+<img src="./assets/img/p6.jpeg" class="rounded float-right" alt="picture 6" height="400 px" width="400px">
+<img src="./assets/img/p7.jpeg" class="rounded float-left" alt="picture 7" height="400 px" width="400px">
+<img src="./assets/img/p8.jpeg" class="rounded float-right" alt="picture 8" height="400 px" width="400px">
+<img src="./assets/img/p9.jpeg" class="rounded float-left" alt="picture 9" height="400 px" width="400px">
+<img src="./assets/img/p10.jpeg" class="rounded float-right" alt="picture 10" height="400 px" width="400px">
+</div>
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
