added some color

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,12 @@
     <title>Remington's Portfolio Page</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <style>
+      body {
+        background-color: rosybrown;
+      }
+    </style>
+    <nav class="navbar navbar-expand-lg navbar-light background-light">
         <a class="navbar-brand" href="#">Remington Taylor</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
